Final testing (for contractinfo , eshop , referral program)
